# ProjectHephaestus

./: .claude-address-review-1179.md  .claude-address-review-1398.md  .claude-address-review-1402.md  .claude-address-review-1580.md  .claude-address-review-711.md  .claude-address-review-819.md  .claude-address-review-842.md  .claude-address-review-994.md  .claude-followup-629.md  .claude-prompt-627.md  .codexignore  .editorconfig  .fleet.yml  .gitignore  .markdownlint.json  .markdownlint.yaml  .plugin-scanner.toml  .pre-commit-config.yaml  .yamllint.yaml  ACTION_PLAN.md  AGENTS.md  ANALYSIS_PROMPT.md  CHANGELOG.md  CICD_IMPLEMENTATION_SUMMARY.md  CI_CD_SETUP.md  CLAUDE.md  CLAUD_CONFIGURATION_IMPLEMENTATION_SUMMARY.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  CURRENT_STATUS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LEARNINGS_ISSUE_768.md  LICENSE  MANUAL_CLEANUP.sh  MIGRATION_ACTION_PLAN.md  (+30 more)
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/context/: scripts.md  utils.md
.claude/security/: guidelines.md
.claude/workflows/: development.md
.codex-plugin/: plugin.json
.github/: CODEOWNERS  README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: README.md  _required.yml  auto-label-needs-plan.yml  auto-label-severity.yml  auto-tag.yml  ci.yml  enable-auto-merge-on-implementation-go.yml  hol-plugin-scanner.yml  pre-commit.yml  release.yml  security.yml  test.yml
commands/: advise.md  learn.md  myrmidon-swarm.md
docs/: DEFINITION_OF_DONE.md  INSTALLER_ARCHITECTURE.md  MIGRATION.md  README.md  RELEASING.md  ROADMAP.md  TECH_DEBT.md  audit-reviewer.md  auto-label-needs-plan.md  contributing.md  index.md  mcp.md  pi-private-provider.md  plugin-installation.md
docs/adr/: 0001-automation-library-boundary.md  0002-pep562-lazy-imports.md  0003-dependabot-renovate-split.md  0004-single-aggregator-required-checks.md  0005-multi-agent-runtime-abstraction.md  README.md
docs/architecture/: DESIGN_DOC.md
docs/release-notes/: README.md  plan-reviewer-final-verdict.md
docs/runbooks/: automation-loop-crash.md  ci-driver-stall.md  claude-quota-exhausted.md  corrupted-worktree.md  index.md  no-silent-failures.md
examples/: usage.sh
hephaestus/: __init__.py  _version_lookup.py  constants.py
hephaestus/agents/: __init__.py  frontmatter.py  loader.py  runtime.py  stats.py
hephaestus/automation/: __init__.py  _followup_phase.py  _implement_phase.py  _interfaces.py  _plan_phase.py  _pr_create_phase.py  _review_phase.py  _review_utils.py  _reviewer_base.py  _secret_patterns.py  _stage_context.py  address_review.py  advise_runner.py  agent_config.py  agent_runtime.py  agent_stage.py  arming_state.py  audit_reviewer.py  auto_merge_coordinator.py  ci_check_inspector.py  ci_driver.py  ci_fix_flow.py  ci_fix_orchestrator.py  ci_predicates.py  ci_run_coordinator.py  claude_invoke.py  claude_models.py  claude_timeouts.py  codex_stage.py  comment_difficulty.py  curses_ui.py  dependency_resolver.py  drive_green_state.py  ensure_state_labels.py  follow_up.py  git_utils.py  github_api.py  implementer.py  implementer_cli.py  implementer_phase_runner.py  (+27 more)
hephaestus/benchmarks/: __init__.py  compare.py
hephaestus/ci/: __init__.py  docker_timing.py  precommit.py  required_checks_gate.py  workflows.py
hephaestus/cli/: __init__.py  colors.py  utils.py
hephaestus/config/: __init__.py  dep_sync.py  paths.py  utils.py
hephaestus/datasets/: __init__.py  downloader.py
hephaestus/discovery/: __init__.py  agents.py  blocks.py  skills.py
hephaestus/forensics/: __init__.py  coredump_handler.py  gdb_runner.py
hephaestus/git/: __init__.py  changelog.py
hephaestus/github/: __init__.py  client.py  fleet_sync.py  gh_cli.py  gh_subprocess.py  git_ops.py  mnemosyne_repo.py  pr_merge.py  rate_limit.py  severity_label.py  stats.py  tidy.py
hephaestus/helpers/: __init__.py  utils.py  utils.py.backup
hephaestus/io/: __init__.py  utils.py
hephaestus/logging/: __init__.py  formatters.py  utils.py
hephaestus/markdown/: __init__.py  anchors.py  fixer.py  link_fixer.py  utils.py
hephaestus/nats/: __init__.py  config.py  events.py  handlers.py  subscriber.py
hephaestus/resilience/: __init__.py  circuit_breaker.py  subprocess_resilience.py
hephaestus/scripts_lib/: __init__.py  check_cli_table_sync.py  check_python_version_consistency.py  check_settings_permission_paths.py  check_version_single_source.py  scaffold_subpackage.py
hephaestus/system/: __init__.py  info.py
hephaestus/utils/: __init__.py  cache.py  file_lock.py  (+4 more)
references/: notes.md
scripts/: README.md  address_review.py  audit_doc_policy.py  check_build_dir_untracked.py  check_cli_table_sync.py  check_conventional_commit.py  check_dco_signoff.py  check_license_compatibility.py  check_pip_audit_ledger_reminder.py  check_private_denylist.py  check_python_version_consistency.py  check_readmes.py  check_security_policy_no_hardcoded_date.py  check_security_version_consistency.py  check_tier_labels.py  check_unit_test_structure.py  check_version_single_source.py  choose_merge_flag.sh  compare_benchmarks.py  demo_cli.py  drive_prs_green.py  example_usage.py  fix_invalid_links.py  generate_changelog.py  implement_issues.py  lint_configs.py  merge_prs.py  pi_smoke.py  pi_smoke_slurm.py  plan_issues.py  review_issues.py  review_plans.py  run_automation_loop.sh  run_tests.py  scaffold_subpackage.py  show_prompt.py  update_version.py  validate_links.py  validate_readme_commands.py  validate_structure.py
shared/: README.md
skills/: THIRD_PARTY_LICENSES.md
tests/: __init__.py  conftest.py  test_benchmark_compare.py  test_cli_colors.py  test_config_utils.py  test_general_utils.py  test_git_utils.py  test_github_utils.py  test_io_utils.py  test_link_fixer.py  test_markdown_fixer.py  test_readme_commands.py  test_show_prompt.py  test_validation.py  test_version_manager.py
(+459 files in other folders)
